WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177491
REGRESSION: ASSERTION FAILED: m_provisionalURL.isEmpty() in WebKit::FrameLoadState::didStartProvisionalLoad
https://bugs.webkit.org/show_bug.cgi?id=177491
Summary
REGRESSION: ASSERTION FAILED: m_provisionalURL.isEmpty() in WebKit::FrameLoad...
Ryan Haddad
Reported
2017-09-26 10:46:32 PDT
Created
attachment 321842
[details]
Crash log ASSERTION FAILED: m_provisionalURL.isEmpty() /Volumes/Data/slave/elcapitan-debug/build/Source/WebKit/UIProcess/FrameLoadState.cpp(37) : void WebKit::FrameLoadState::didStartProvisionalLoad(const WebCore::URL &) 1 0x1110aea90 WTFCrash 2 0x11406e706 WebKit::FrameLoadState::didStartProvisionalLoad(WebCore::URL const&) 3 0x1146bce1f WebKit::WebFrameProxy::didStartProvisionalLoad(WebCore::URL const&) 4 0x114869911 WebKit::WebPageProxy::didStartProvisionalLoadForFrame(unsigned long long, unsigned long long, WebCore::URL&&, WebCore::URL&&, WebKit::UserData const&) 5 0x1149348e9 void IPC::callMemberFunctionImpl<WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(unsigned long long, unsigned long long, WebCore::URL&&, WebCore::URL&&, WebKit::UserData const&), std::__1::tuple<unsigned long long, unsigned long long, WebCore::URL, WebCore::URL, WebKit::UserData>, 0ul, 1ul, 2ul, 3ul, 4ul>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(unsigned long long, unsigned long long, WebCore::URL&&, WebCore::URL&&, WebKit::UserData const&), std::__1::tuple<unsigned long long, unsigned long long, WebCore::URL, WebCore::URL, WebKit::UserData>&&, std::__1::integer_sequence<unsigned long, 0ul, 1ul, 2ul, 3ul, 4ul>) 6 0x1149344b8 void IPC::callMemberFunction<WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(unsigned long long, unsigned long long, WebCore::URL&&, WebCore::URL&&, WebKit::UserData const&), std::__1::tuple<unsigned long long, unsigned long long, WebCore::URL, WebCore::URL, WebKit::UserData>, std::__1::integer_sequence<unsigned long, 0ul, 1ul, 2ul, 3ul, 4ul> >(std::__1::tuple<unsigned long long, unsigned long long, WebCore::URL, WebCore::URL, WebKit::UserData>&&, WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(unsigned long long, unsigned long long, WebCore::URL&&, WebCore::URL&&, WebKit::UserData const&)) 7 0x11491d802 void IPC::handleMessage<Messages::WebPageProxy::DidStartProvisionalLoadForFrame, WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(unsigned long long, unsigned long long, WebCore::URL&&, WebCore::URL&&, WebKit::UserData const&)>(IPC::Decoder&, WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(unsigned long long, unsigned long long, WebCore::URL&&, WebCore::URL&&, WebKit::UserData const&)) 8 0x114913dd8 WebKit::WebPageProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 9 0x114918897 non-virtual thunk to WebKit::WebPageProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 10 0x11410c594 IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) 11 0x113ff3017 WebKit::ChildProcessProxy::dispatchMessage(IPC::Connection&, IPC::Decoder&) 12 0x114a4802a WebKit::WebProcessProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 13 0x114a48127 non-virtual thunk to WebKit::WebProcessProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 14 0x114001383 IPC::Connection::dispatchMessage(IPC::Decoder&) 15 0x113ff8641 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) 16 0x11400198f IPC::Connection::dispatchOneMessage() 17 0x1140089bd IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_14::operator()() 18 0x11400890c WTF::Function<void ()>::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_14>::call() 19 0x1110ebf1e WTF::Function<void ()>::operator()() const 20 0x11110c578 WTF::RunLoop::performWork() 21 0x11110cd84 WTF::RunLoop::performWork(void*) 22 0x7fff9596e7e1 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 23 0x7fff9594df0c __CFRunLoopDoSources0 24 0x7fff9594d42f __CFRunLoopRun 25 0x7fff9594ce28 CFRunLoopRunSpecific 26 0x7fff968e5f99 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 27 0x10fb9c916 WTR::TestController::platformRunUntil(bool&, double) 28 0x10fb7a969 WTR::TestController::runUntil(bool&, double) 29 0x10fb9f54f WTR::TestInvocation::invoke() 30 0x10fb81cfc WTR::TestController::runTest(char const*) 31 0x10fb82d08 WTR::TestController::runTestingServerLoop()
https://build.webkit.org/results/Apple%20El%20Capitan%20Debug%20WK2%20(Tests)/r222499%20(3280)/results.html
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=fast%2Floader%2Fsubmit-form-while-parsing-2.html
Attachments
Crash log
(69.11 KB, text/plain)
2017-09-26 10:46 PDT
,
Ryan Haddad
no flags
Details
Patch
(2.27 KB, patch)
2017-09-27 22:03 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2017-09-26 10:47:48 PDT
This flaky assertion failure is occurring on El Capitan Debug WK2 with LayoutTest fast/loader/submit-form-while-parsing-2.html
Alexey Proskuryakov
Comment 2
2017-09-27 17:41:37 PDT
Is this a regression? Having two provisional loads at once sounds super bad.
Alex Christensen
Comment 3
2017-09-27 17:44:54 PDT
This is probably related to
https://trac.webkit.org/changeset/222456/webkit
We don't have two provisional loads, although there is a radar indicating that such is needed
rdar://5634381
This is probably just from not cleaning something up properly.
Alex Christensen
Comment 4
2017-09-27 21:54:37 PDT
It looks like this test has been flaky for a while
https://bugs.webkit.org/show_bug.cgi?id=132181
https://bugs.webkit.org/show_bug.cgi?id=105952
Alex Christensen
Comment 5
2017-09-27 22:03:06 PDT
Created
attachment 322066
[details]
Patch
WebKit Commit Bot
Comment 6
2017-09-29 17:54:26 PDT
Comment on
attachment 322066
[details]
Patch Clearing flags on attachment: 322066 Committed
r222674
: <
http://trac.webkit.org/changeset/222674
>
WebKit Commit Bot
Comment 7
2017-09-29 17:54:28 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2017-09-29 17:55:29 PDT
<
rdar://problem/34751626
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug