REGRESSION: ASSERTION FAILED: m_provisionalURL.isEmpty() in WebKit::FrameLoadState::didStartProvisionalLoad https://bugs.webkit.org/show_bug.cgi?id=177491

Patch by Alex Christensen <achristensen@webkit.org> on 2017-09-29
Reviewed by Andy Estes.

* WebProcess/WebPage/WebFrame.cpp:
(WebKit::WebFrame::setUpWillSubmitFormListener):
(WebKit::WebFrame::continueWillSubmitForm):
(WebKit::WebFrame::invalidatePolicyListener):
Speculative fix for a flaky assertion.
Restore the clearing of the policy listeners we used to have when form submission was treated as a policy.

Canonical link: https://commits.webkit.org/193958@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222674 268f45cc-cd09-0410-ab3c-d52691b4dbfc